--- a/theory/geometrics/wall_thickness.html
+++ b/theory/geometrics/wall_thickness.html
@@ -36,7 +36,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Longitudinal Distance" href="longitudinal_distance.html" />
-    <link rel="prev" title="Radial Distance and Radial Length" href="radial_metrics.html" />
+    <link rel="prev" title="Radial Metrics" href="radial_metrics.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
     
@@ -427,7 +427,7 @@ title="Print to PDF"
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">previous</p>
-            <p class="prev-next-title">Radial Distance and Radial Length</p>
+            <p class="prev-next-title">Radial Metrics</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="longitudinal_distance.html" title="next page">
